--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Project</title>
 </head>
 <body>
-    <a href="assets/file/1.pdf" download="test">
+    <a href="assets/1.pdf" download="test">
         <button id="button">
             Hujjetti juklep aliw
         </button>
