--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Project</title>
 </head>
 <body>
-    <a href="assets/1.pdf" download="test">
+    <a href="1.pdf" download="test">
         <button id="button">
             Hujjetti juklep aliw
         </button>
@@ -17,3 +17,4 @@
     <script src="assets/app.js"></script>
 </body>
 </html>
+
